@@ -1899,8 +1899,7 @@ VrmlSFImage *  Vrml97Parser::sfImageValue() {
 	VrmlSFImage * siv = new VrmlSFImage();
 	
 	
-	long w(0L), h(0L), com(0L), pixel(0L);
-	//int cnt = 0;
+	unsigned long w(0L), h(0L), com(0L), pixel(0L);
 	
 	
 	try {      // for error handling
@@ -1909,7 +1908,6 @@ VrmlSFImage *  Vrml97Parser::sfImageValue() {
 		com=intValue();
 		
 		SimpleVector<unsigned char> pixelVector;
-			    //cout << "sfImageValue {" << endl;
 		
 		{
 		for (;;) {
@@ -1920,11 +1918,8 @@ VrmlSFImage *  Vrml97Parser::sfImageValue() {
 				// looks kind of ugly but might in fact be ok. basically,
 				// we read the value as an integer, then strip off the
 				// bytes one by one.
-						for(int i=com-1; i>=0; i--) {
-				unsigned char pix = (unsigned char)(pixel >> (8*i) & 0xff);
-					          //cout << "sfImageValue:pixel:" << i << ":" << pixel << "/" << (int)pix << endl;
-				pixelVector.add(pix);
-				//cnt++;
+						for (int i = com - 1; i >= 0; i--) {
+				pixelVector.add(static_cast<unsigned char>(pixel >> (8 * i) & 0xff));
 				}
 				
 			}
@@ -1935,10 +1930,6 @@ VrmlSFImage *  Vrml97Parser::sfImageValue() {
 		}
 		_loop72:;
 		}
-		
-			    //cout << "w/h/nc=" << w << "," << h << "," << com << "," << cnt << endl;
-			    //cout << "w*h*com=" << w*h*com << endl;
-			    //cout << "pixelVector.size()=" << pixelVector.size() << endl;
 		
 		// if somebody gives us a really, really, really big
 		// pixeltexture, then we will crash. in the age of dos
@@ -1952,7 +1943,6 @@ VrmlSFImage *  Vrml97Parser::sfImageValue() {
 		throw antlr::SemanticException("Wrong number of pixel values for SFImage.");
 		}
 		*siv = VrmlSFImage(w, h, com, pixelVector.data()); // hmmmm...
-		//cout << "}" << endl;
 		
 	}
 	catch (ANTLR_USE_NAMESPACE(antlr)RecognitionException& ex) {
