@@ -18,8 +18,8 @@
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 // 
 
-#ifndef  _VRMLNODEIMAGETEXTURE_
-#define  _VRMLNODEIMAGETEXTURE_
+#ifndef  VRMLNODEIMAGETEXTURE_H
+#define  VRMLNODEIMAGETEXTURE_H
 
 #include "VrmlNodeTexture.h"
 #include "VrmlMFString.h"
@@ -48,11 +48,11 @@ public:
   virtual const VrmlField *getField(const char *fieldName) const;
   virtual void setField(const char *fieldName, const VrmlField &fieldValue);
 
-  virtual int nComponents();
-  virtual int width();
-  virtual int height();
-  virtual int nFrames();
-  virtual unsigned char* pixels();
+  virtual size_t nComponents();
+  virtual size_t width();
+  virtual size_t height();
+  virtual size_t nFrames();
+  virtual const unsigned char * pixels();
 
   virtual const VrmlMFString& getUrl() const;
 
@@ -80,5 +80,5 @@ private:
 
 };
 
-#endif // _VRMLNODEIMAGETEXTURE_
+#endif // VRMLNODEIMAGETEXTURE_H
 
